--- a/GemSwapper/res/values/strings.xml
+++ b/GemSwapper/res/values/strings.xml
@@ -39,10 +39,11 @@
     <string name="name">Name:\t</string>
     <string name="highscore">Score:\t</string>
     <string name="loading">Please wait, loading data</string>
-    
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_game">Game</string>
     <string name="title_activity_achievements">Achievements</string>
     <string name="title_activity_how_to">HowToActivity</string>
+    <string name="title_activity_high_score_score">HighScore - Score</string>
+    <string name="title_activity_high_score_achievements">HighScore - Achievements</string>
 
 </resources>
