--- a/GemSwapper/res/values/strings.xml
+++ b/GemSwapper/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="imageDescription">This is an image</string>
 
     <!-- Activity - How To Play -->
-    <string name="howToPlayGame1">Score points by combining three or more of the same shape in a straight line</string>
-    <string name="howToPlayGame2">Drag a shape towards a neighbouring shape to swap their places</string>
+    <string name="howToPlayGame1">Score points by combining three or more of the same gem in a straight line</string>
+    <string name="howToPlayGame2">Drag a gem towards a neighbouring gem to swap their places</string>
     <string name="howToPlayGame3">The goal of the game is to score as many points as you can before the time runs out.</string>
     <string name="howToImage1">Three in a row</string>
     <string name="howToImage2">Four in a row</string>
@@ -29,6 +29,24 @@
     <string name="howToImage5">A T-shape</string>
     <string name="imageInfo">An image describing how to play the game</string>
 
+    <!-- Achievements -->
+    <string name="three">Lines of Three</string>
+    <string name="threeDescription">Match three gems</string>
+    <string name="four">Lines of Four</string>
+    <string name="fourDescription">Match four gems</string>
+    <string name="five">Lines of Five</string>
+    <string name="fiveDescription">Match five gems in a straight line</string>
+    <string name="corner">Corner Shapes</string>
+    <string name="cornerDescription">Match gems in a corner shape</string>
+    <string name="tShape">T-Shapes</string>
+    <string name="tShapeDescription">Match gems in a T-shape</string>
+    <string name="score">Score</string>
+    <string name="scoreDescription">Get as many points as you can in one game</string>
+    <string name="time">Time</string>
+    <string name="timeDescription">Keep your game going as long as possible</string>
+    <string name="no_achievements">Something has gone terribly wrong, there are noe achievements here!</string>
+    
+    
     <!-- Activity - Credits -->
     <string name="creditsMain">Credits</string>
     <string name="creators">This game was created by Christian Stokkebekk, Christian Holt and
@@ -39,10 +57,10 @@
     <string name="name">Name:\t</string>
     <string name="highscore">Score:\t</string>
     <string name="loading">Please wait, loading data</string>
-    
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_game">Game</string>
     <string name="title_activity_achievements">Achievements</string>
     <string name="title_activity_how_to">HowToActivity</string>
+    <string name="title_activity_database">Database</string>
 
 </resources>
