--- a/GemSwapper/res/values/strings.xml
+++ b/GemSwapper/res/values/strings.xml
@@ -8,6 +8,14 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_highscore">HighscoreActivity</string>
     <string name="title_activity_credits">CreditsActivity</string>
+    <string name="title_activity_game">Game</string>
+    <string name="title_activity_achievements">Achievements</string>
+    <string name="title_activity_how_to">HowToActivity</string>
+    <string name="title_activity_database">Database</string>
+    <string name="title_activity_high_score_score">HighScore - Score</string>
+    <string name="title_activity_high_score_achievements">HighScore - Achievements</string>
+    <string name="title_activity_get_user">GetUser</string>
+    <string name="title_activity_endgame">EndgameActivity</string>
 
     <!-- Main Menu & Menu Buttons -->
     <string name="start_game">Start Game</string>
@@ -42,11 +50,8 @@
     <string name="tShapeDescription">Match gems in a T-shape</string>
     <string name="score">Score</string>
     <string name="scoreDescription">Get as many points as you can in one game</string>
-    <string name="time">Time</string>
-    <string name="timeDescription">Keep your game going as long as possible</string>
     <string name="no_achievements">Something has gone terribly wrong, there are noe achievements here!</string>
-    
-    
+
     <!-- Activity - Credits -->
     <string name="creditsMain">Credits</string>
     <string name="creators">This game was created by Christian Stokkebekk, Christian Holt and
@@ -57,19 +62,19 @@
     <string name="name">Name:\t</string>
     <string name="highscore">Score:\t</string>
     <string name="loading">Please wait, loading data</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_game">Game</string>
-    <string name="title_activity_achievements">Achievements</string>
-    <string name="title_activity_how_to">HowToActivity</string>
-    <string name="title_activity_database">Database</string>
-    <string name="title_activity_high_score_score">HighScore - Score</string>
-    <string name="title_activity_high_score_achievements">HighScore - Achievements</string>
-    <string name="title_activity_get_user">GetUser</string>
 
-    <!--  Activity - Get User -->
+
+    <!-- Activity - Get User -->
     <string name="getName">Insert your username</string>
     <string name="editTextHint">username</string>
     <string name="buttonText">OK</string>
     <string name="toastUser">Your username is: </string>
     <string name="errorBack">You must choose a username first! </string>
+    
+    <!--     Activity - End Game  -->
+	<string name="highscore_main">Your score was:\t\t</string>
+    <string name="button_quit">Quit</string>
+    <string name="button_submit">Submit and Restart</string>
+   
+
 </resources>
