--- a/GemSwapper/res/values/strings.xml
+++ b/GemSwapper/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_settings">Settings</string>
 
     <!-- activities -->
-    <string name="title_activity_main">GEMSWAPPER</string>
+    <string name="title_activity_main">Gemswapper</string>
     <string name="title_activity_highscore">Highscore</string>
     <string name="title_activity_credits">Credits</string>
     <string name="title_activity_game">Game</string>
@@ -18,6 +18,7 @@
     <string name="title_activity_endgame">Endgame</string>
 
     <!-- Main Menu & Menu Buttons -->
+    <string name="menu_title">GEMSWAPPER</string>
     <string name="start_game">Start Game</string>
     <string name="how_to_play">How to Play</string>
     <string name="achievements">Achievements</string>
@@ -79,7 +80,7 @@
     <string name="errorBack">You must choose a username first! </string>
 
     <!-- Activity - End Game -->
-    <string name="highscore_main">Your score was:\t\t</string>
+    <string name="highscore_main">YOUR SCORE:\t\t</string>
     <string name="button_quit">QUIT</string>
     <string name="button_submit">PLAY AGAIN</string>
     
